# Newtron

./: .gitignore  README.md  package-lock.json  package.json  setup.bat  testrun.bat  versionPlan.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cache.rs  commands.rs  indexer.rs  lib.rs  main.rs  router.rs
src-tauri/src/index/: builtin.rs  history.rs  local.rs  local_ranking.rs  mod.rs  ranking.rs
src-tauri/src/search/: bing.rs  brave.rs  browser_fallback.rs  duckduckgo.rs  google.rs  mod.rs
src/components/: Favicon.tsx  LocalResultRow.tsx  SuggestionRow.tsx  WebResults.tsx  WebSearchRow.tsx
src/hooks/: useDebouncedValue.ts
src/lib/: api.ts  types.ts
